@@ -25,10 +25,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import java.util.function.UnaryOperator;
 import java.util.stream.StreamSupport;
 
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static java.util.stream.StreamSupport.stream;
 
@@ -36,7 +35,7 @@ final class MongoDBUtils {
     static final String ID_FIELD = "_id";
 
     private static final Function<Object, String> KEY_DOCUMENT = d -> cast(d).name();
-    private static final Function<Object, Object> VALUE_DOCUMENT = d -> MongoDBUtils.convert(cast(d).value());
+    private static final UnaryOperator<Object> VALUE_DOCUMENT = d -> MongoDBUtils.convert(cast(d).value());
 
     private MongoDBUtils() {
     }
@@ -58,7 +57,7 @@ final class MongoDBUtils {
         }
         if (isSudDocumentList(val)) {
             return StreamSupport.stream(Iterable.class.cast(val).spliterator(), false)
-                    .map(MongoDBUtils::getMap).collect(toList());
+                    .map(MongoDBUtils::getMap).toList();
         }
         return val;
     }
@@ -70,7 +69,7 @@ final class MongoDBUtils {
             Object value = values.get(key);
             return getDocument(key, value);
         };
-        return values.keySet().stream().filter(isNotNull).map(documentMap).collect(Collectors.toList());
+        return values.keySet().stream().filter(isNotNull).map(documentMap).toList();
     }
 
     private static org.eclipse.jnosql.communication.document.Document getDocument(String key, Object value) {
@@ -80,7 +79,7 @@ final class MongoDBUtils {
             List<List<org.eclipse.jnosql.communication.document.Document>> documents = new ArrayList<>();
             for (Object object : Iterable.class.cast(value)) {
                 Map<?, ?> map = Map.class.cast(object);
-                documents.add(map.entrySet().stream().map(e -> getDocument(e.getKey().toString(), e.getValue())).collect(toList()));
+                documents.add(map.entrySet().stream().map(e -> getDocument(e.getKey().toString(), e.getValue())).toList());
             }
             return org.eclipse.jnosql.communication.document.Document.of(key, documents);
         }
